--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <body>
     <header>
       <div class="navigationContainer">
-        <div class="brand"><img src="images/ColedaLogo.png" alt="coledas.se" height="70px"></div>
+        <div class="brand"><img src="images/ColedaLogo.png" alt="coleda.se" height="70px"></div>
         <!-- Hamburger Icon -->
         <div class="hamburger-menu" id="hamburger">
           <div></div>
@@ -279,23 +279,18 @@
         <h2 id="priser">Priser</h2>
         <div class="row">
           <div class="card1">
-            <h2>Botox</h2>
-            <h1>1500kr</h1>
-            <img src="icons/check.png" width="20px" style="margin:10px 0px">
-            <img src="icons/check.png" width="20px" style="margin:10px 0px">
-            <img src="icons/check.png" width="20px" style="margin:10px 0px">
-            <img src="icons/check.png" width="20px" style="margin:10px 0px">
-            <img src="icons/check.png" width="20px" style="margin:10px 0px">
-            <a
-              href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
-              target="_blank" alt="Botox"
-            >
-           <button>Boka tid</button>
-            </a>
-          </div>
-          <div class="card2">
             <h2>Fillers</h2>
-            <h1>2100kr</h1>
+            <h3>fr. 2100kr</h3>
+            <div style="width:100%;height:20px;"></div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Läppar 1.0ml
+            </div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Läppar 0.5ml
+            </div>
+            <div style="width:100%;height:20px;"></div>
+            Filler är en icke-animalisk hyaluronsyra som placeras under huden för att fylla ut och sträcka den överliggande huden.  Effekten varar i upp till ett år, men kompletterande behandlingar kan utföras när som helst för att uppnå önskad effekt.
+
             <a
               href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
               target="_blank" alt="Fillers"
@@ -303,9 +298,58 @@
               <button>Boka tid</button>
             </a>
           </div>
+
+          <div class="card2">
+            <h2>Botox</h2>
+            <h3>fr. 1500kr</h3>
+            <div style="width:100%;height:20px;"></div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Bruxism (spända käkar)
+            </div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Gummy Smile
+            </div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Lip-Flip
+            </div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Hyperhidros
+            </div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Bunny Lines (näsrynkor)
+            </div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Gropig haka (apelsinhy)
+            </div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Kråksparkar
+            </div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Pannan
+            </div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Sura mungipor
+            </div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Microbotox
+            </div>
+            <div class="bulletPoints">
+              <img src="icons/check.png" width="20px" style="margin:5px 5px 5px 0px"> Spänningshuvudvärk
+            </div>
+            <a
+              href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
+              target="_blank" alt="Botox"
+            >
+           <button>Boka tid</button>
+            </a>
+          </div>
+
           <div class="card1">
             <h2>PROFHILO®</h2>
-            <h1>2400kr</h1>
+            <h3>fr. 2400kr</h3>
+            <div style="width:100%;height:20px;"></div>
+            Profhilo är en injicerbar anti-aging gjord av ren hyaluronsyra för hud som förlorat sin elasticitet och fasthet.. Behandlingen ges med fördel i en kur om minst två injektionstillfällen, synbar effekt på oönskade linjer, ger huden ökad fasthet, en riktigt fuktboozt. 
+
             <a
               href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
               target="_blank" alt="profhilo"
